--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,10 +1,10 @@
 name: Update Market Data
 
 on:
-  # schedule:
-    # Run every weekday at 4:30 PM EST (after market close) - DISABLED until scraper is fixed
-    # - cron: '30 21 * * 1-5'
-  workflow_dispatch:  # Allow manual triggering only
+  schedule:
+    # Run daily at 4:30 PM EST (9:30 PM UTC)
+    - cron: '30 21 * * *'
+  workflow_dispatch:  # Allow manual triggering
   # push:
     # paths:
       # - 'scripts/update_market_data.py'
