--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # Run daily at 4:30 PM EST (9:30 PM UTC)
     - cron: '30 21 * * *'
+    # Also run weekly on Mondays at 9:00 AM EST (2:00 PM UTC) for weekly summary
+    - cron: '0 14 * * 1'
   workflow_dispatch:  # Allow manual triggering
   # push:
     # paths:
